Added StringEntity factory + robolectric