@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'com.neenbedankt.android-apt'
+apply plugin: 'org.robolectric'
 
 android {
     compileSdkVersion 21
@@ -37,6 +38,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.0.3'
     compile 'commons-validator:commons-validator:1.4.0@jar'
     compile 'com.google.guava:guava:18.0@jar'
+    compile 'org.apache.commons:commons-lang3:3.3.2@jar'
 
     compile 'com.jakewharton:butterknife:6.0.0'
     compile 'com.google.dagger:dagger:2.0-SNAPSHOT'
@@ -48,13 +50,48 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
     provided "org.projectlombok:lombok:1.14.8"
 
-    testCompile 'junit:junit:4.12'
+    testCompile 'org.hamcrest:hamcrest-all:1.3'
+    testCompile ('junit:junit:4.12') {
+        exclude module : 'hamcrest'
+        exclude module : 'hamcrest-core'
+    }
     testCompile 'org.mockito:mockito-all:1.9.5'
+    testCompile 'org.assertj:assertj-core:1.7.1'
+    testCompile 'org.robolectric:robolectric:2.4'
+    testCompile 'commons-io:commons-io:2.4'
 }
 
 android {
 
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
+}
+
+robolectric {
+    // Configure includes / excludes
+    include '**/*Test.class'
+    exclude '**/espresso/**/*.class'
+
+    // Configure max heap size of the test JVM
+    maxHeapSize = '2048m'
+
+    // Configure the test JVM arguments - Does not apply to Java 8
+    jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
+
+    // Specify max number of processes (default is 1)
+    maxParallelForks = 4
+
+    // Specify max number of test classes to execute in a test process
+    // before restarting the process (default is unlimited)
+    forkEvery = 150
+
+    // configure whether failing tests should fail the build
+    ignoreFailures true
+
+    // use afterTest to listen to the test execution results
+    afterTest { descriptor, result ->
+        println "Executing test for ${descriptor.name} with result: ${result.resultType}"
     }
 }
